# pjecz-hermes

./: .gitignore  README.md  pyproject.toml
config/: settings.py
hermes/: app.py
hermes/clientes/: app.py
hermes/depositos/: app.py
hermes/mensajes/: app.py
hermes/solicitudes/: app.py
tests/: test_solicitudes.py
